--- a/_posts/2011-07-11-glitch.md
+++ b/_posts/2011-07-11-glitch.md
@@ -1,6 +1,7 @@
---- 
-title: Glitch
-date: 11/07/2011
+---
+layout: post
+title: "Glitch"
+---
 
 So there's this <a href="http://www.iamcal.com/">Cal Henderson</a> guy. I first heard of him when I was trying to decide if I should focus on <a href="http://rubyonrails.org/">Rails</a> or <a href="https://www.djangoproject.com/">Django</a>. <a href="http://www.youtube.com/watch?v=i6Fr65PFqfk">His talk at DjangoCon 2008 made me laugh my ass off</a>. Many of the problems mentioned in this talk have been addressed, but it's still worth watching if you like to chuckle.
 
