Fixing a sentence that's been bugging me all night

--- a/_posts/2016-12-04-pebble.md
+++ b/_posts/2016-12-04-pebble.md
@@ -10,7 +10,7 @@ Last week I heard about the [rumoured buyout of Pebble by Fitbit](https://techcr
 
 Because I've been so happy with my Time Steel, [I also backed the Time 2](https://www.kickstarter.com/projects/597507018/pebble-2-time-2-and-core-an-entirely-new-3g-ultra).  I was very much looking forward to the larger screen and heartrate sensor. But since backing, there's been radio silence on when I should expect to see this product, if ever.
 
-I respect that hardware manufacturing is a tough beat. I'd also bet that, despite my preference for Pebble's choices, most people would prefer different design decisions. As well, I'd guess that a Fitbit buyout means there's also some embargo on news until the deal goes through. All this said: I'm extremely disappointed by Pebble for not making a deal that better protects the Kickstarter backers who've brought them to this point.
+I respect that hardware manufacturing is a tough beat. I'd also bet that, despite my preference for Pebble's choices, most people would prefer different design decisions. As well, I'd guess that a Fitbit buyout means there's also some embargo on news until the deal goes through. All this said: I feel under-informed and frustrated. I've backed enough projects on Kickstarter to understand that delays are normal, and things don't always go as planned. It's only when there's a lack of communication that I really start getting worried.
 
 Below is the email I just sent to [support@pebble.com](mailto:support@pebble.com)
 
