--- a/_posts/2022-11-23-2022-upgradies.md
+++ b/_posts/2022-11-23-2022-upgradies.md
@@ -2,14 +2,14 @@
 title: 2022 Upgradies
 ---
 
-[My favourite podcast](https://www.relay.fm/upgrade) is once again [polling its listenership](http://upgradies.vote/) to help pick an assortment of “best of 2022” stuff. I didn’t have a pick for every category, but I though it’d be fun to call out some of my choices.
+[My favourite podcast](https://www.relay.fm/upgrade) is once again [polling its listenership](http://upgradies.vote/) for their “best of 2022” list. I didn’t have a pick for every category, but I thought it’d be fun to call out some of my choices.
 
 <hr>
 
 ### Best Overall iOS App
 **[Reeder 5](https://reederapp.com)**
 
-[I already mentioned](https://anderegg.ca/2022/11/15/twitter-is-going-great) that I’d been falling away from Twitter for a while. One thing I really missed was following news sites and blogs directly. Reeder has been helping me with that. It’s a beautifully designed app with clever gesture controls. My favourite feature is its use of iCloud for syncing. Maybe nothing will bring back the hole in my heart left by [Google Reader](https://en.wikipedia.org/wiki/Google_Reader), but this comes closest.
+[I already mentioned](https://anderegg.ca/2022/11/15/twitter-is-going-great) that I’d been falling away from Twitter for a while. As I did so, I wanted a replacement for how I got news. Reeder has been helping me with that. It’s a beautifully designed app with clever gesture controls. My favourite feature is its use of iCloud for syncing. Maybe nothing will bring back the hole in my heart left by [Google Reader](https://en.wikipedia.org/wiki/Google_Reader), but this comes closest.
 
 <hr>
 
