More text tweaks

--- a/_posts/2022-11-23-2022-upgradies.md
+++ b/_posts/2022-11-23-2022-upgradies.md
@@ -30,7 +30,7 @@ This game was in early access for a while, but [officially launched last month](
 ### Favourite TV Show
 **[Severance](https://tv.apple.com/us/show/severance/umc.cmc.1srk2goyh2q2zdxcx605w8vtx)**
 
-I’ve only watched a handful of Apple TV shows. *For All Mankind*, *Ted Lasso*, and *Foundation* were brilliant. Severance is on another level, though. I won’t say too much for fear of spoiling things, but if you haven’t seen it, you should really check it out.
+I’ve only watched a handful of Apple TV shows. *For All Mankind*, *Ted Lasso*, and *Foundation* were brilliant. Severance is on another level, though. I won’t say too much for fear of spoiling things. If you haven’t seen it, you should really check it out.
 
 <hr>
 
