--- a/_posts/2025/2025-06-30-apollo-13-turns-30.md
+++ b/_posts/2025/2025-06-30-apollo-13-turns-30.md
@@ -14,10 +14,10 @@ I couldn't get enough of the jargon and how real things looked. In part, this wa
 
 I was lucky enough to have dial-up internet access at the time. After racing home from school, I looked up everything I could about the Apollo flights and the Saturn V rocket. I remember specifically being fascinated by Tom Hanks as Jim Lovell saying "talkback is barber pole" as the LM is successfully captured (at 43:12 in the film). [^1] It's just a wonderful piece of gobbledygook, and it took me a while to figure out what it meant.
 
-The Apollo command and lunar modules had several ways of displaying status data to the crew. One way is with "talkback annunciators", or just "talkbacks", small shutter-based displays that are either fully closed (grey), half-closed (half-barber pole), or fully open (barber poll). Each state means something different for each display. [You can see an example of these displays in this Space Exploration Stack Exchange question](https://space.stackexchange.com/questions/24138/apollo-17-what-is-a-barber-pole-and-what-did-it-is-gray-mean). It's a small thing, but even in 1995 I was able to spend a good chunk of the Christmas break learning about old space missions on slow as hell dialup. Those memories are deeply tied to this film for me.
+The Apollo command and lunar modules had several ways of displaying status data to the crew. One way is with "talkback annunciators", or just "talkbacks", small shutter-based displays that are either fully closed (grey), half-closed (half-barber pole), or fully open (barber poles). Each state means something different for each display. [You can see an example of these displays in this Space Exploration Stack Exchange question](https://space.stackexchange.com/questions/24138/apollo-17-what-is-a-barber-pole-and-what-did-it-is-gray-mean). It's a small thing, but even in 1995 I was able to spend a good chunk of the Christmas break learning about old space missions on slow as hell dialup. Those memories are deeply tied to this film for me.
 
 If any of this has convinced you to nerd out more on this topic, I highly recommend the [Apollo Guidance Computer](https://www.youtube.com/watch?v=2KSahAoOLdU&list=PL-_93BVApb59FWrLZfdlisi_x7-Ut_-w7) and [Apollo Comms](https://www.youtube.com/watch?v=v49ucdZcx9s&list=PL-_93BVApb58SXL-BCv4rVHL-8GuC2WGb) series by [CuriousMarc](https://www.youtube.com/@CuriousMarc) on YouTube. Also the Haynes manuals for the [Saturn V](https://www.goodreads.com/book/show/29637218-nasa-saturn-v-1967-1973-apollo-4-to-apollo-17-skylab) and the [Apollo 11 mission](https://www.goodreads.com/book/show/6265943-nasa-apollo-11).
 
 ---
 
-[^1]: What was actually said was "[we've got two barber polls](https://apolloinrealtime.org/13/?t=003:17:07)", and it was said by Jack Swigert. However, [that phrase was said in another context](https://apolloinrealtime.org/13/?t=057:05:46) later in the flight [after the accident](https://apolloinrealtime.org/13/?t=055:55:20).
+[^1]: What was actually said was "[we've got two barber poles](https://apolloinrealtime.org/13/?t=003:17:07)", and it was said by Jack Swigert. However, [that phrase was said in another context](https://apolloinrealtime.org/13/?t=057:05:46) later in the flight [after the accident](https://apolloinrealtime.org/13/?t=055:55:20).
